# cef-sample

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  codesign.py  make.py  notarize.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux-arm.yml  linux.yml  macos.yml  windows.yml
app/assets/: index.html
app/assets/js/: app.17339587.js  app.17339587.js.map  chunk-vendors.4b299c71.js  chunk-vendors.4b299c71.js.map
app/cmake/cef/: DownloadCEF.cmake
app/cmake/main/: CMakeLists.txt
app/cmake/shared/: CMakeLists.txt  common.cmake
app/include/main/: AppBrowser.hpp  AppClient.hpp  AppRenderer.hpp  RequestDumpResourceProvider.hpp
app/include/main/binding/: AppBinding.hpp
app/include/main/net/: RequestClient.hpp
app/include/main/v8/: AppExtension.hpp
app/include/shared/: AppConfig.hpp  AppFactory.hpp  ClientManager.hpp  Entrypoint.hpp
app/include/shared/macos/: ProcessEntrypoint.hpp
app/include/shared/util/: BinaryResourceProvider.hpp  BrowserUtil.hpp  BrowserWindowDelegate.hpp  ClientUtil.hpp  EntrypointUtil.hpp  ResourceUtil.hpp
app/resources/macos/: Info.plist  helper-Info.plist
app/resources/macos/English.lproj/: InfoPlist.strings
app/resources/windows/: app.rc  resource.h
app/src/main/: AppBrowser.cpp  AppClient.cpp  AppFactoryBrowser.cpp  AppFactoryRenderer.cpp  AppRenderer.cpp  RequestDumpResourceProvider.cpp  main.cpp
app/src/main/binding/: AppBinding.cpp
app/src/main/macos/: ProcessEntrypoint.cpp
app/src/main/net/: RequestClient.cpp
app/src/main/v8/: AppExtension.cpp
app/src/shared/: AppFactoryEmptyBrowser.cpp  AppFactoryEmptyOther.cpp  AppFactoryEmptyRenderer.cpp  ClientManager.cpp
app/src/shared/linux/: ClientUtil.cpp  Entrypoint.cpp  ResourceUtil.cpp
app/src/shared/macos/: ClientUtil.mm  Entrypoint.mm  ProcessEntrypoint.cpp  ResourceUtil.mm
app/src/shared/posix/: ResourceUtil.cpp
app/src/shared/util/: BrowserUtil.cpp  BrowserWindowDelegate.cpp  ClientUtil.cpp  EntrypointUtil.cpp  ResourceUtil.cpp
app/src/shared/windows/: BinaryResourceProvider.cpp  ClientUtil.cpp  Entrypoint.cpp  ResourceUtil.cpp
docker/linux-arm/: Dockerfile
docker/linux-arm64/: Dockerfile
modules/: config.py  runner.py
modules/tasks/: build.py  common.py  dmg.py  run.py  webapp.py
webapp/: package.json
webapp/src/: router.js
webapp/src/components/: Home.vue
